# pydataform

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
examples/: advanced_workflow.py  basic_workflow.py
pydataform/: __init__.py  _version.py  dataform.py
tests/: test_dataform.py
